--- a/source/app/components/wi-workflow-machine-learning/template/wi-workflow-machine-learning.html
+++ b/source/app/components/wi-workflow-machine-learning/template/wi-workflow-machine-learning.html
@@ -187,13 +187,20 @@
         left: 15px;
         right: 15px;
     }
+    wi-workflow-machine-learning .transform-badge.badge {
+        background-color: #ccc;
+    }
+    wi-workflow-machine-learning .badge {
+        background-color: #88a;
+        cursor: pointer;
+    }
 </style>
 <div style='position:relative;height: 100%; flex: 1; display: flex; background-color: #f7f7f7;flex-direction:column;'>
     <wizard indicators-position="top" on-finish="wiWorkflowMachineLearning.finishWizard()">
         <wz-step wz-title="Selection curve">
             @@include('./curve-selection.html')
         </wz-step>
-        <wz-step wz-title="Model Params" wz-disabled="{{wiWorkflowMachineLearning.workflowConfig.model.type != 'curve' && wiWorkflowMachineLearning.workflowConfig.model.type != 'crp'}}">
+        <wz-step wz-title="Model Params" wz-disabled="{{wiWorkflowMachineLearning.workflowConfig.model.type != 'curve' && wiWorkflowMachineLearning.workflowConfig.model.type != 'crp' && wiWorkflowMachineLearning.workflowConfig.model.type !='classification'}}">
             @@include('./model-params.html')
         </wz-step>
         <wz-step wz-title='Data Inputs'>
