--- a/source/app/components/wi-workflow-machine-learning/template/curve-selection.html
+++ b/source/app/components/wi-workflow-machine-learning/template/curve-selection.html
@@ -33,7 +33,7 @@
                 <div style='background-color:#eee;' class='panel-heading'>
                     <span style='font-weight:700;'>Predict {{wiWorkflowMachineLearning.workflowConfig.model.type}}</span>
                     <span ng-click="wiWorkflowMachineLearning.addCurveInput();wiWorkflowMachineLearning.saveWorkflow();" 
-                        ng-if="wiWorkflowMachineLearning.workflowConfig.model.type=='curve'"
+                        ng-if="wiWorkflowMachineLearning.workflowConfig.model.type=='curve' || wiWorkflowMachineLearning.workflowConfig.model.type == 'classification'"
                         style="float: right; cursor: pointer; font-size: 14px;">
                         <i class="ti-plus"></i>  Add input curve
                     </span>
@@ -72,7 +72,7 @@
                                     </span>
                                 </div>
                             </div>
-                            <span ng-if="$index < (wiWorkflowMachineLearning.workflowConfig.model.inputs.length - 1) && wiWorkflowMachineLearning.workflowConfig.model.type=='curve'" ng-click="wiWorkflowMachineLearning.removeCurveInput($index)" style="padding-top: 10px; padding-left: 10px; cursor: pointer"><i class="ti-close"></i></span>
+                            <span ng-if="$index < (wiWorkflowMachineLearning.workflowConfig.model.inputs.length - 1) && (wiWorkflowMachineLearning.workflowConfig.model.type=='curve'|| wiWorkflowMachineLearning.workflowConfig.model.type=='classification')" ng-click="wiWorkflowMachineLearning.removeCurveInput($index)" style="padding-top: 10px; padding-left: 10px; cursor: pointer"><i class="ti-close"></i></span>
                         </li>
                     </ul>
                 </div>
