--- a/source/app/components/wi-zone-template-manager/wi-zone-template-manager.html
+++ b/source/app/components/wi-zone-template-manager/wi-zone-template-manager.html
@@ -19,7 +19,11 @@
                 </div>
             </div>
             <div class="scroll-container">
-                <wi-base-treeview name="zoneTemplateManagerTreeview" config="wiZoneTemplateManager.templateConfig" container="wiZoneTemplateManager" on-click-function="wiZoneTemplateManager.templateClickFunction">
+                <wi-base-treeview name="zoneTemplateManagerTreeview" 
+                    config="wiZoneTemplateManager.templateConfig" 
+                    container="wiZoneTemplateManager" 
+                    on-click-function="wiZoneTemplateManager.templateClickFunction"
+                    filter="">
                 </wi-base-treeview>
             </div>
         </div>
