--- a/source/app/components/wi-zone-set-manager/wi-zone-set-manager.html
+++ b/source/app/components/wi-zone-set-manager/wi-zone-set-manager.html
@@ -30,7 +30,7 @@
     </div>
     <div class="right-side" style="box-sizing:border-box">
         <div class="right-heading">
-            <h5 style="margin-right: 15px; font-weight:bold;display:inline-block" ng-show="wiZoneSetManager.zones.length !== 0">
+            <h5 style="margin: 8px; font-weight:bold;display:inline-block" ng-show="wiZoneSetManager.zones.length !== 0">
                 Order by: </h5>
             <select ng-init="wiZoneSetManager.zoneOrder='none'" ng-model="wiZoneSetManager.zoneOrder" ng-show="wiZoneSetManager.zones.length !== 0">
                 <option value="none">None</option>
