update filter & search wi-base-tree

--- a/source/app/components/wi-task/wi-task.html
+++ b/source/app/components/wi-task/wi-task.html
@@ -6,6 +6,8 @@
         wi-task #dragTab wi-tab>div {
             height: calc(100% - 117px);
             border: none;
+            background: white;
+            overflow: auto;
         }
 
         wi-task .bordered {
