--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -726,3 +726,14 @@ input[type=checkbox].input-check {
     border: 1px solid #ccc;
     border-radius: 10px;
 }
+.list-pattern-style>wi-base-treeview {
+	.wi-treeview-container{
+		padding: 5px;
+    	border: 1px solid #ccc;
+    	padding-right: 5px;
+    	.wi-parent-node>.wi-parent-content>.item-content>span {
+    		background: #fff;
+    		color: blue;
+    	}
+	}
+}
