--- a/source/components/wi-base-treeview/wi-base-treeview.less
+++ b/source/components/wi-base-treeview/wi-base-treeview.less
@@ -101,6 +101,9 @@ wi-base-treeview {
             font-weight: bold;
             background: #f0f0f0;
         }
+        .item-unused {
+            opacity: 0.3;
+        }
     }
     .rootview {
         padding-left: 0;
