update drag zoneset

--- a/source/app/components/wi-task/wi-task.html
+++ b/source/app/components/wi-task/wi-task.html
@@ -194,7 +194,7 @@
                     </div>
                     <div class='wi-droppable' style="flex:2;margin-left: 5px;" wi-element-ready="wiTask.droppableSetting();">
                         <div class="panel panel-default" style='height: 100%;display:flex;flex-direction: column;'>
-                            <div class="panel-heading" ng-init="wiTask.typeFilter='inputchoice'">
+                            <div class="panel-heading">
                                 <label class="btn btn-default"
                                 ng-class='{active: wiTask.typeFilter=="inputchoice"}'
                                 style="margin-right: 5px;">
