improve drag curve to copy

--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -20,7 +20,9 @@ img {
 		padding: 0px;
 	}
 }
-
+.modal-md {
+	width: 400px;
+}
 .modal-body{
 	padding: 5px 15px;
 	max-height: calc(~"100% - 150px");
