--- a/source/components/wi-custom-input/wi-custom-input.html
+++ b/source/components/wi-custom-input/wi-custom-input.html
@@ -11,10 +11,10 @@
             <span class="custom-value">{{opt.value}}</span>
             <span class="custom-label">{{opt.label}}</span>
         </li>
-        <li ng-if="wiCustomInput.type == 'curve'" ng-repeat="opt in wiCustomInput.options" ng-click="wiCustomInput.onClickCurve(opt)" class="custom-item"
-        ng-class="{'custom-item-selected': opt.id==wiCustomInput.model.idDesCurve}">
-            <span class="custom-value">{{opt.properties.name}}</span>
-            <span class="custom-label">{{opt.properties.dataset}}</span>
+        <li ng-if="wiCustomInput.type == 'curve'" ng-repeat="opt in wiCustomInput.optionsHash" ng-click="wiCustomInput.onClickCurve(opt)" class="custom-item"
+        ng-class="{'custom-item-selected': opt==wiCustomInput.model.curveName.toUpperCase()}">
+            <span class="custom-value">{{opt}}</span>
+            <!-- <span class="custom-label">{{opt.properties.dataset}}</span> -->
         </li>
     </ul>
 </div>
