--- a/source/app/components/wi-histogram/template/wi-histogram.html
+++ b/source/app/components/wi-histogram/template/wi-histogram.html
@@ -13,14 +13,19 @@
 
 
         <div style='flex:1; display: flex;flex-direction:column;margin:0px 14px'>
+            <!-- <wi-d3-histogram style="width: 100%; flex: 1; display: flex;"
+                name='{{wiHistogram.wiD3AreaName}}'
+                wi-histogram-ctrl='wiHistogram'
+                container-name="{{wiHistogram.containerName}}"
+                selections='$parent.selections'></wi-d3-histogram> -->
             <wi-d3-histogram style="width: 100%; flex: 1; display: flex;"
                 name='{{wiHistogram.wiD3AreaName}}'
                 wi-histogram-ctrl='wiHistogram'
                 container-name="{{wiHistogram.containerName}}"
-                selections='$parent.selections'></wi-d3-histogram>
-            <!--<wi-d3-histogram style="width: 100%; flex: 1; display: flex;"
-                name='{{wiHistogram.wiD3AreaName}}'
-                id-histogram='wiHistogram.id'></wi-d3-histogram>-->
+                selections='$parent.selections'
+                curves-properties='wiHistogram.curvesProperties'
+                config='wiHistogram.config'>
+            </wi-d3-histogram>
             <div resizable r-directions="['top']" r-flex="true" class="statistic-pane">
                 <h5 class='text-left statistic-header'>
                     <label>Statistics</label>
