--- a/source/less/main.less
+++ b/source/less/main.less
@@ -294,6 +294,9 @@ input[type].display-none, .display-none {
 .margin-right-0_5em {
     margin-right: 0.5em;
 }
+.margin-top-5px {
+    margin-top: 5px;
+}
 .margin-top-0_5em {
     margin-top: 0.5em;
 }
@@ -419,6 +422,9 @@ input[type].display-none, .display-none {
 }
 .padding-left-2_5em {
     padding-left: 2.5em;
+}
+.padding-left-15px {
+    padding-left: 15px;
 }
 .padding-left-60px {
     padding-left: 60px;
